<resources>
    <string name="app_name">App Repn</string>
    <string name="enterSecureCode">Veuillez entrer votre code de sécurité pour vous connecter</string>
    <string name="secureCodePlaceholder">Code de sécurité</string>
    <string name="connectButton">Se connecter</string>
    <string name="waitForCredentialCheck">Vérification du code de sécurité en cours…</string>
    <string name="wrongSecureCode">Le code de sécurité n\'est pas correct…</string>
    <string name="serverError">Une erreur inattendue est surevenue… Peut être que le site du REPN est en maintenance ? Merci de réessayer plus tard.</string>
    <string name="title_activity_user_list">Liste des membres</string>
    <string name="synchroFinished">Synchronisation terminée</string>
    <string name="action_synchronize">Synchroniser</string>
    <string name="title_activity_user_details">Fiche de contact</string>
    <string name="user_list_explanation">Sélectionner un membre pour aller vers sa fiche de contact.</string>
    <string name="action_modify_secure_code">Modifier le code de sécurité</string>
    <string name="login_activity_title">Vérification de sécurité</string>
    <string name="login_help">Ce code de sécurité se trouve sur votre fiche de membre sur le site web www.repnivelles.be</string>
    <string name="call_phone">Téléphoner</string>
    <string name="send_sms">SMS</string>
    <string name="add_contact">Ajouter comme contact</string>
</resources>
