<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity">

    <TextView
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterSecureCode"
            android:layout_centerHorizontal="true"
            android:id="@+id/enterSecureCodeText" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:id="@+id/secureCodeEditText"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/enterSecureCodeText"
            android:hint="@string/secureCodePlaceholder"
            android:gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/connectButton"
            android:layout_below="@id/secureCodeEditText"
            android:onClick="submitSecurityCode"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextView"/>

</RelativeLayout>
