<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="be.repn.repnmobile.UserDetailsActivity">

        <TextView
                android:padding="15dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/firstName_detail_view"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/last_detail_view"
                android:layout_toRightOf="@+id/firstName_detail_view"/>

        <TextView
                android:padding="15dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/phone_detail_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/firstName_detail_view"/>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/call_phone"
                android:id="@+id/callButton"
                android:layout_below="@+id/phone_detail_view"
                android:layout_centerHorizontal="true"
                android:onClick="startDial"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/send_sms"
                android:id="@+id/smsButton"
                android:layout_toRightOf="@+id/callButton"
                android:layout_alignBaseline="@id/callButton"
                android:onClick="startSms"
                />

        <TextView
                android:padding="15dp"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/email_detail_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/phone_detail_view"/>

        <TextView
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/address_detail_view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/email_detail_view"/>

        <Button
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:id="@+id/addContact"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/address_detail_view"
                android:onClick="addContact"
                />

</RelativeLayout>
